<resources>
    <string name="app_name">BoH Manager</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="tab_text_1">Stats</string>
    <string name="tab_text_2">Powers</string>
    <string name="tab_text_3">Skills</string>
    <string name="tab_text_4">Draw/Advan</string>
    <string name="tab_text_5">Desc.</string>
    <string name="attributes">Attributes</string>
    <string name="powers">Powers</string>
    <string name="dexStat">Dex</string>
    <string name="strStat">Str</string>
    <string name="bodyStat">Body</string>
    <string name="intStat">Int</string>
    <string name="willStat">Will</string>
    <string name="mindStat">Mind</string>
    <string name="inflStat">Infl</string>
    <string name="auraStat">Aura</string>
    <string name="spiritStat">Spirit</string>
    <string name="wealthStat">Wealth</string>
    <string name="heroPoints">Hero Points</string>
    <string name="skills">Skills</string>
    <string name="desName">"Character Name: "</string>
    <string name="desType">"Character Type: "</string>
    <string name="desMotivation">"Motivation: "</string>
    <string name="desAlterEgo">"Alter Ego: "</string>
    <string name="desHeight">"Height: "</string>
    <string name="desWeight">"Weight: "</string>
    <string name="desHair">"Hair Color: "</string>
    <string name="desEyeColor">"Eye Color: "</string>
    <string name="desGroupAffiliation">"Group Affiliation: "</string>
    <string name="desOccupation">"Occupation: "</string>
    <string name="desBaseOfOperations">"Base of Operations: "</string>
    <string name="desMartialStatus">"Martial Status: "</string>
    <string name="desPersonality">"Personality: "</string>
    <string name="desHistory">"History: "</string>
    <string name="desDescription">"Description: "</string>
    <string name="desKnownRelatives">Known Relatives:</string>
    <string name="description">Description</string>
    <string name="drawAdvantages">Drawbacks/Advantages</string>
    <string name="title_activity_edit">edit</string>
    <string name="editView">Edit Character</string>
    <string name="viewView">View Character</string>
    <string name="addPowerButton">Add Power</string>
    <string name="removePowerButton">Remove Power</string>
    <string name="addDrawAdvantageButton">Add</string>
    <string name="addKnownRelativeButtonName">Add Relative</string>
    <string name="addSkillButtonText">Add Skill</string>
    <string name="addSubSkillButtonText">Add Sub-Skill</string>
    <string name="new_character">New Character</string>
  <string name="search_character">Search Name or Alter Ego</string>
</resources>
