<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/description"
    android:textAlignment="center"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="1.0">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textName"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:text="@string/desName"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textNameValue"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints="John Smith"
          android:hint="John Smith"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textType"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:text="@string/desType"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textTypeValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="Crusader"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textMotivation"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/desMotivation"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textMotivationValue"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:autofillHints="To Uphold Justice"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textAlterEgo"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/desAlterEgo"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textAlterEgoValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="Superman"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textHeight"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/desHeight"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textWeightHeight"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="5 9"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"
          />
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textWeight"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/desWeight"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textWeightValue"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:autofillHints="150lbs"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textHair"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/desHair"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textHairValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="Brown"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textEye"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/desEyeColor"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textEyeValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="Brown"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textGroupAffiliation"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/desGroupAffiliation"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textGroupAffiliationValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="Young Avengers"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textOccupation"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/desOccupation"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textOccupationValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="Doctor"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textBaseOfOperations"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/desBaseOfOperations"
          android:textAlignment="textEnd"
          android:textSize="16sp"/>
        <EditText
          android:id="@+id/textBaseOfOperationsValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="The Hall of Justice"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textMartialStatus"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/desMartialStatus"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textMartialStatusValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="Married"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/textPersonality"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/desPersonality"
          android:textAlignment="textEnd"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textPersonalityValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="Honest"
          android:inputType="text"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="vertical">
        <TextView
          android:id="@+id/textHistory"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/desHistory"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textView36"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints=""
          android:inputType="textCapSentences|textMultiLine"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
          android:id="@+id/textDescription"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/desDescription"
          android:textSize="18sp"/>
        <EditText
          android:id="@+id/textDescriptionValue"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints=""
          android:inputType="textCapSentences|textMultiLine"
          android:text=""
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <EditText
          android:id="@+id/editTextRelativeAdd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:ems="10"
          android:hint="Brother - Bubba"
          android:inputType="textPersonName"/>
        <Button
          android:id="@+id/buttonAddRelative"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="@string/addKnownRelativeButtonName"/>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/textHistoryValue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
          android:id="@+id/textKnownRelatives"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/desKnownRelatives"
          android:textSize="18sp"/>
        <ListView
          android:id="@+id/listViewKnownRelatives"
          android:layout_width="match_parent"
          android:layout_height="match_parent"/>
      </LinearLayout>

    </LinearLayout>
  </ScrollView>

</android.support.constraint.ConstraintLayout>